--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,6 +14,11 @@
       </div>
       
       <div class="form-group">
+        <%= f.label :avatar %>
+        <%= f.file_field :avatar %>
+      </div>
+      
+      <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, class: "form-control", autofocus: true %>
       </div>
@@ -37,9 +42,4 @@
 
   <% end %>
 
-</div>
-
-<div class="panel-footer">
-  <h3>Cancel my account</h3>
-  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-default" %></p>
 </div>
