--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :avatar %><br />
+    <%= f.file_field :avatar %>
+  </div>
+      
+  <div class="form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, class: "form-control", required: true %>
   </div>
