--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to 'Submit link', new_link_path %></li>
                 <li><%= link_to 'Account', edit_user_registration_path %></li>
+                <li class="round-image-50"><%= image_tag(current_user.avatar.url(:thumb)) %></li>
                 <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
               </ul>
             <% else %>
