--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
       
   <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, class: "form-control", required: true %>
+    <%= f.email_field :email, class: "form-control", required: true %>
   </div>
 
   <div class="form-group">
