--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :invite_code %><br />
+    <%= f.text_field :invite_code, class: "form-control", required: true %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :avatar %><br />
     <%= f.file_field :avatar %>
   </div>
