Destroy comment slow

--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,4 +1,4 @@
-$('#comment_<%= @comment.id %>').fadeOut();
+$('#comment_<%= @comment.id %>').fadeOut('slow');
 
 var new_comment_count = parseInt($('#comment_count').text()) - 1;
 $('#comment_count').text(new_comment_count);
