--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -2,7 +2,7 @@
   <div class="link row clearfix">
     <h2>
       <%= link_to link.title, link %><br>
-      <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> by <%= link.user.name %></small>
+      <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> by <%= link_to link.user.name, profiles_path(link.user.name) %></small>
     </h2>
   </div>
 
